--- a/stadtwerden/css/styles.css
+++ b/stadtwerden/css/styles.css
@@ -18,7 +18,6 @@
    Author's styles
    ---------------------------------------------------------*/
 	body {
-    background-color: #333;
 	}
 
   header[role=banner] {
@@ -37,13 +36,15 @@
   #player {
     background-repeat: no-repeat;
     background-position: top left;
-    background-image: url(../img/stadtwerden.png);
+    background-image: url(../img/stadtwerden.jpg);
     background-color: #e2e2e2;
     height: 293px;
-    max-width: 520px;
+    width: 100%;
+    max-width: 900px;
     margin: 10% auto;
-	}
-
+    box-shadow: 0 0 30px black;
+  }
+  
   footer[role=contentinfo] {
     text-align: center;
     display: none;
